register now flashes message depending on input

--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,7 @@
                 <label for="password">Password</label><br>
                 <input class="form-control" type="password" name="password"><br>
                 <label for="match">Retype Your Password</label><br>
-                <input class="form-control" type="match" name="match"><br>
+                <input class="form-control" type="password" name="match"><br>
                 <button class="submit-button" type="submit">Register</button>
             </form>
         </center>
