--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,7 +11,16 @@
                 <h2>{{data.label}}</h2>
             </div>
             <div class="title">
+                <span class="material-icons">
+                    clear
+                </span>
                 <p>{{data.title}}</p>
+                <a class="edit-icon" href="{{url_for('edit')}}">
+                    <span class="material-icons">
+                        edit
+                    </span>
+                </a>
+
             </div>
             
         </div>
