--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,3 +1,4 @@
-{% extends 'base.html' %} {% block container %}
+{% extends 'base.html' %} 
+{% block container %}
 This is the edit page.
 {% endblock %}
