--- a/templates/login.html
+++ b/templates/login.html
@@ -15,8 +15,8 @@
     <body>
         <center>
             <form class="container" action="/" method="GET">
-                <label for="username">Username</label><br>
-                <input class="form-control" type="text" name="username" placeholder="Username"><br>
+                <label for="email">Email</label><br>
+                <input class="form-control" type="text" name="email" placeholder="Email"><br>
                 <label for="password">Password</label><br>
                 <input class="form-control" type="password" name="password" placeholder="Password"><br>
                 <button class="submit-button" type="submit">Log In</button>
