--- a/templates/register.html
+++ b/templates/register.html
@@ -15,8 +15,8 @@
     <body>
         <center>
             <form class="container" action="/register" method="POST">
-                <label for="username">Username</label><br>
-                <input class="form-control" type="text" name="username"><br>
+                <label for="email">Email</label><br>
+                <input class="form-control" type="text" name="email"><br>
                 <label for="password">Password</label><br>
                 <input class="form-control" type="password" name="password"><br>
                 <label for="match">Retype Your Password</label><br>
