--- a/templates/search.html
+++ b/templates/search.html
@@ -1,3 +1,13 @@
 {% extends 'base.html' %} {% block container %}
-This is the search page.
+<div class="search-container">
+    <form action="{{url_for('search')}}" method="POST" class="search-bar">
+        <input type="text" placeholder="Search ToDo's">
+        <p id="search-by-buttons">
+            <label><input type="radio" name="search-by" value="Label">Label</label>
+            <label><input type="radio" name="search-by" value="Title">Title</label>
+            <label><input type="radio" name="search-by" value="Date">Date</label>
+        </p>
+    </form>
+
+</div>
 {% endblock %}
