10/20 Brian added CRUD operations to home page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@
 
 <section class="home-container">
     <h1>Today's Reminders</h1>
-    {% for data in dummyData %}
+    {% for data in todos %}
         <div class="content">
             <div class="label">
                 <h2>{{data.label}}</h2>
