--- a/templates/register.html
+++ b/templates/register.html
@@ -2,27 +2,42 @@
 <html>
     <head>
         <title>Register</title>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <ul class=flashes>
-                {% for message in messages %}
-                    <center>{{ message }}</center>
-                {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="../static/css/styles.css">
     </head>
     <body>
-        <center>
-            <form class="container" action="/register" method="POST">
-                <label for="email">Email</label><br>
-                <input class="form-control" type="text" name="email"><br>
-                <label for="password">Password</label><br>
-                <input class="form-control" type="password" name="password"><br>
-                <label for="match">Retype Your Password</label><br>
-                <input class="form-control" type="password" name="match"><br>
-                <button class="submit-button" type="submit">Register</button>
-            </form>
-        </center>
+        <section class="authentication-container">
+            <div class="authentication-content">
+                <div class="authentication-label">
+                    <center>
+                        <form class="authentication-container" action="/register" method="POST">
+                            {% with messages = get_flashed_messages() %}
+                                {% if messages %}
+                                    <ul class=flashes>
+                                    {% for message in messages %}
+                                        <center><div class="message">{{ message }}</div></center>
+                                    {% endfor %}
+                                    </ul>
+                                {% endif %}
+                            {% endwith %}
+                            <label for="email">Email</label><br>
+                            <input class="form-control" type="text" name="email"><br>
+                            <label for="password">Password</label><br>
+                            <input class="form-control" type="password" name="password"><br>
+                            <label for="match">Retype Your Password</label><br>
+                            <input class="form-control" type="password" name="match"><br>
+                            <center>
+                                <input class="submit-button" type="submit" value="Register">
+                            </center>
+                        </form>
+                        <form class="authentication-container" action="/returnToLogin" method="GET">
+                            <center>
+                                <input class="submit-button" type="submit" value="Cancel">
+                            </center>
+                        </form>
+                    </center>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
