10/21 updated home CRUD with new collections. Implemented edit CRUD operations

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,26 +1,26 @@
 {% extends 'base.html' %} 
 {% block container %}
-<form action="{{url_for('edit_todo', mongoid=mongoid)}}" method="POST" class="edit-form">
+<form action="{{url_for('edit_todo', todo_id=doc._id)}}" method="POST" class="edit-form">
     <div >
         <label for="title">Title</label>
         {#}
             <!-- value="{{doc.title}}" -->
         #}
-        <input name="title" id="title" type="text" value="PLACEHOLDER TITLE" required>
+        <input name="title" id="title" type="text" value="{{doc.title}}" required>
     </div>
     <div>
         <label for="details">Details</label>
         {#
             <!-- {{doc.details}} -->
         #}
-        <textarea name="details" id="details">PLACEHOLDER DETAILS</textarea>
+        <textarea name="details" id="details">{{doc.content}}</textarea>
     </div>
     <div>
         <label for="label">Label</label>
         {#
             <!-- {{doc.label}} -->
         #}
-        <input name="label" id="label" type="text" value="PLACEHOLDER LABEL">
+        <input name="label" id="label" type="text" value="{{doc.label}}">
     </div>
     <div>
         <label for="date">Date (mm/dd/yyyy)</label>
@@ -28,14 +28,14 @@
             TODO: add validation
             <!-- {{doc.date}} -->
         #}
-        <input name="date" id="date" type="text" value="PLACEHOLDER DATE" required>
+        <input name="date" id="date" type="text" value="{{doc.date}}" required>
     </div>
     <div>
         <label for="time">Time</label>
         {#
             <!-- {{doc.time}} -->
         #}
-        <input name="time" id="time" type="text" value="PLACEHOLDER TIME" required>
+        <input name="time" id="time" type="text" value="{{doc.time}}" required>
     </div>
     <div class="button-container">
         <button type="reset">Cancel Changes</button>
