--- a/templates/login.html
+++ b/templates/login.html
@@ -20,8 +20,8 @@
                                     </ul>
                                 {% endif %}
                             {% endwith %}
-                            <label for="email">Email</label><br>
-                            <input class="form-control" type="text" name="email" placeholder="Email"><br>
+                            <label for="username">Username</label><br>
+                            <input class="form-control" type="text" name="username" placeholder="Username"><br>
                             <label for="password">Password</label><br>
                             <input class="form-control" type="password" name="password" placeholder="Password"><br>
                             <center>
