--- a/templates/register.html
+++ b/templates/register.html
@@ -20,8 +20,8 @@
                                     </ul>
                                 {% endif %}
                             {% endwith %}
-                            <label for="email">Email</label><br>
-                            <input class="form-control" type="text" name="email"><br>
+                            <label for="username">Username</label><br>
+                            <input class="form-control" type="text" name="username"><br>
                             <label for="password">Password</label><br>
                             <input class="form-control" type="password" name="password"><br>
                             <label for="match">Retype Your Password</label><br>
