--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -172,6 +172,49 @@ body {
     color: #000;
     text-decoration: none;
 }
+/***************** ADD PAGE STYLES *****************/
+.add-form {
+    width: 90%;
+    padding: 35px;
+}
+
+.add-form div{
+    margin-top: 40px;
+}
+
+.add-form label{
+    display: block;
+    font-size: 48px;
+    margin-left: 1rem;
+}
+
+.add-form input, textarea {
+    width:100%;
+    height: 100px;
+    font-size: 36px;
+    text-decoration: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+}
+
+.add-form .button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+}
+
+.add-form button {
+    margin-top: 30px;
+    width: 80%;
+    height: 90px;
+    font-size: 30px;
+    background-color:#648bc6;
+    color: #fff;
+    border: 2px solid black;
+    border-radius: 10px;
+}
 
 /***************** EDIT PAGE STYLES *****************/
 .edit-form {
