--- a/templates/add.html
+++ b/templates/add.html
@@ -1,3 +1,43 @@
-{% extends 'base.html' %} {% block container %}
-This is the add todo page.
+{% extends 'base.html' %} 
+{% block container %}
+<form action="{{url_for('add')}}" method="POST" class="add-form">
+    <div >
+        <label for="title">Title</label>
+        {#}
+            <!-- "{{doc.title}}" -->
+        #}
+        <input name="title" id="title" type="text" value="{{doc.title}}" required>
+    </div>
+    <div>
+        <label for="content">Content</label>
+        {#
+            <!-- {{doc.content}} -->
+        #}
+        <!--<textarea name="details" id="details">{{doc.content}}</textarea>-->
+    </div>
+    <div>
+        <label for="label">Label</label>
+        {#
+            <!-- {{doc.label}} -->
+        #}
+        <input name="label" id="label" type="text" value="{{doc.label}}">
+    </div>
+    <div>
+        <label for="date">Date (mm/dd/yyyy)</label>
+        {#
+            <!-- {{doc.date}} -->
+        #}
+        <input name="date" id="date" type="text" value="{{doc.date}}" required>
+    </div>
+    <div>
+        <label for="time">Time</label>
+        {#
+            <!-- {{doc.time}} -->
+        #}
+        <input name="time" id="time" type="text" value="{{doc.time}}" required>
+    </div>
+    <div class="button-container">
+        <button type="submit">Add Task</button>
+    </div>
+</form>
 {% endblock %}
