10/22- brian date validation in edit

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -28,7 +28,7 @@
             TODO: add validation
             <!-- {{doc.date}} -->
         #}
-        <input name="date" id="date" type="text" value="{{doc.date}}" required>
+        <input name="date" id="date" type="date" value="{{date}}" required>
     </div>
     <div>
         <label for="time">Time</label>
