--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block container %}
 
@@ -11,7 +11,7 @@
                 <h2>{{data.label}}</h2>
             </div>
             <div class="title">
-                <a class="delete-icon" href="{{url_for('delete', todo_id=data._id)}}">
+                <a class="delete-icon" href="{{url_for('delete', todo_id=data._id, dest='homepage')}}">
                     <span class="material-icons">
                         clear
                     </span>
@@ -25,7 +25,7 @@
                 </a>
 
             </div>
-            
+
         </div>
     {% endfor %}
 </section>
