10/22 Brian - time validation to edit

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -35,7 +35,7 @@
         {#
             <!-- {{doc.time}} -->
         #}
-        <input name="time" id="time" type="text" value="{{doc.time}}" required>
+        <input name="time" id="time" type="time" value="{{time}}" required>
     </div>
     <div class="button-container">
         <button type="reset">Cancel Changes</button>
