--- a/templates/add.html
+++ b/templates/add.html
@@ -3,38 +3,23 @@
 <form action="{{url_for('add')}}" method="POST" class="add-form">
     <div >
         <label for="title">Title</label>
-        {#}
-            <!-- "{{doc.title}}" -->
-        #}
-        <input name="title" id="title" type="text" value="{{doc.title}}" required>
+        <input name="title" id="title" type="text" value="" required>
     </div>
     <div>
         <label for="content">Content</label>
-        {#
-            <!-- {{doc.content}} -->
-        #}
-        <!--<textarea name="details" id="details">{{doc.content}}</textarea>-->
+        <input name="content" id="content" type="text" value="">
     </div>
     <div>
         <label for="label">Label</label>
-        {#
-            <!-- {{doc.label}} -->
-        #}
-        <input name="label" id="label" type="text" value="{{doc.label}}">
+        <input name="label" id="label" type="text" value="">
     </div>
     <div>
         <label for="date">Date (mm/dd/yyyy)</label>
-        {#
-            <!-- {{doc.date}} -->
-        #}
-        <input name="date" id="date" type="text" value="{{doc.date}}" required>
+        <input name="date" id="date" type="text" value="" required>
     </div>
     <div>
         <label for="time">Time</label>
-        {#
-            <!-- {{doc.time}} -->
-        #}
-        <input name="time" id="time" type="text" value="{{doc.time}}" required>
+        <input name="time" id="time" type="text" value="" required>
     </div>
     <div class="button-container">
         <button type="submit">Add Task</button>
