--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %} {% block container %}
 <div class="search-container">
     <form action="{{url_for('search')}}" method="POST" class="search-bar">
+        {% if error %}
+        <input type="text" name="query" placeholder="Search ToDos" value="{{prefill}}" autofocus></input>
+        {% else %}
         <input type="text" name="query" placeholder="Search ToDos" autofocus></input>
+        {% endif %}
         <p>Search by...</p>
         <div id="search-by-buttons">
             <input type="submit" name="search-by" value="Label"></input>
@@ -9,5 +13,8 @@
             <input type="submit" name="search-by" value="Date"></input>
         </div>
     </form>
+    {% if error %}
+    <p>{{error}}</p>
+    {% endif %}
 </div>
 {% endblock %}
