10/23-Brian-sort by time, format time, homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,17 +7,20 @@
     <h1>Today's Reminders</h1>
     {% for data in todos %}
         <div class="content">
-            <div class="label">
+            <!-- <div class="label">
                 <h2>{{data.label}}</h2>
-            </div>
+            </div> -->
             <div class="title">
                 <a class="delete-icon" href="{{url_for('delete', todo_id=data._id, dest='homepage')}}">
                     <span class="material-icons">
                         clear
                     </span>
                 </a>
-
-                <p>{{data.title}}</p>
+                <div class="title-details">
+                    <p class="title-text">{{data.title}}</p>
+                    <p class="title-time">{{data.time|time_format}}</p>
+                </div>
+                
                 <a class="edit-icon" href="{{url_for('edit', todo_id=data._id)}}">
                     <span class="material-icons">
                         edit
