--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -136,12 +136,13 @@ body {
 }
 
 .home-container h1 {
-    color: rgb(66, 66, 66);
+    text-align: center;
+    color: rgb(38, 38, 38);
     font-weight: 700;
     font-size: 60px;
 }
 
-.content .label {
+/* .content .label {
     padding: 5px 40px;
     background-color: rgb(175, 222, 249);
     border-radius: 20px;
@@ -150,16 +151,16 @@ body {
 }
 
 .content h2 {
-    /* margin-left: 1em; */
+    margin-left: 1em; 
     font-weight: 500;
     font-size: 45px;
-}
+} */
 
 .content .title {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 10px;
+    padding: 0px 20px;
     margin-left: 2em;
     margin-bottom: 30px;
     background-color: rgb(152, 182, 220);
@@ -167,9 +168,21 @@ body {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
-.content p {
+.content .title .title-details {
+    text-align: center;
+    /* display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%; */
+}
+
+.title-text {
     /* margin-left: 3em; */
-    font-size: 32px;
+    font-size: 40px;
+}
+
+.title-time{
+    font-size: 30px;
 }
 
 .content .title a {
