--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,38 +3,22 @@
 <form action="{{url_for('edit_todo', todo_id=doc._id)}}" method="POST" class="edit-form">
     <div >
         <label for="title">Title</label>
-        {#}
-            <!-- value="{{doc.title}}" -->
-        #}
         <input name="title" id="title" type="text" value="{{doc.title}}" required>
     </div>
     <div>
         <label for="details">Details</label>
-        {#
-            <!-- {{doc.details}} -->
-        #}
         <textarea name="details" id="details">{{doc.content}}</textarea>
     </div>
     <div>
         <label for="label">Label</label>
-        {#
-            <!-- {{doc.label}} -->
-        #}
         <input name="label" id="label" type="text" value="{{doc.label}}">
     </div>
     <div>
-        <label for="date">Date (mm/dd/yyyy)</label>
-        {#
-            TODO: add validation
-            <!-- {{doc.date}} -->
-        #}
+        <label for="date">Date</label>
         <input name="date" id="date" type="date" value="{{date}}" required>
     </div>
     <div>
         <label for="time">Time</label>
-        {#
-            <!-- {{doc.time}} -->
-        #}
         <input name="time" id="time" type="time" value="{{time}}" required>
     </div>
     <div class="button-container">
