formatted error line in search page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -268,6 +268,11 @@ body {
 
 /***************** SEARCH PAGE STYLES *****************/
 
+.search-container {
+    display: flex;
+    justify-content: center;
+}
+
 .search-bar {
     display: flex;
     justify-content: center;
@@ -302,6 +307,13 @@ body {
     color: #648bc6;
     font-size: 50px;
 }
+
+.search-error {
+    font-size: 50px;
+    color: red;
+    font-weight: bold;
+}
+
 
 /***************** Login and register styles *****************/
 
