--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,7 @@
         </div>
     </form>
     {% if error %}
-    <p>{{error}}</p>
+    <p class="search-error">{{error}}</p>
     {% endif %}
 </div>
 {% endblock %}
